src/test/FinalFail2/FinalFail2.expected
error: FinalFail2.panda:11:14: 'FinalFail2.test' may not be modified
1 error
