src/test/FinalFail2/FinalFail2.panda
class FinalFail2 {
    @final
    var test := "Hello"
}

class Test {
    @class
    method main() {
        var test := FinalFail2()
        Console.writeLine(test.test)
        test.test := "Can't change it!"
    }
}